# horavox

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  clock.py  horavox.py  pyproject.toml  requirements.txt  speaking_clock.py
.github/workflows/: ci.yml
data/lang/: en.json  pl.json
src/horavox/: __init__.py  cli.py  clock.py  core.py  main.py  now.py  stop.py  voice.py
src/horavox/data/lang/: en.json  pl.json
tests/: test_cli.py  test_commands.py  test_core.py
